--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
+    "ollama": "^0.5.14",
     "vue": "^3.5.13"
   },
   "devDependencies": {
